# graphite

./: .gitignore  .graphite.json  LICENSE  README.md  flake.nix  index.html  package-lock.json  package.json  pubspec.yaml  vite.config.ts
android/: gradle.properties
android/app/: build.gradle.kts
assets/monaco_lsp/: index.html
assets/monaco_lsp/assets/: editor-CsoAGW9b.js  editor.worker-BwSD0hbq.js  extensionHost.worker-CY515XEa.js  fileCommands._save-DB4kwNim.js  freemarker2-C3P5sNfO.js  handlebars-Ck6xD7sd.js  html-DiHB72Ch.js  iconv-lite-umd-CnCUmFlC.js  (+24 more)
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: .graphite.json  main.dart
lib/debug/: debug_session_log.dart
lib/lsp/: graphite_lsp_host_io.dart  graphite_lsp_host_provider.dart  graphite_lsp_host_stub.dart  graphite_lsp_runtime.dart  lsp_capabilities.dart  lsp_capabilities_io.dart  lsp_capabilities_stub.dart  lsp_config.dart  lsp_host_service.dart  lsp_process.dart  lsp_relay.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
src/: App.css  App.tsx  main.tsx  monacoEnvironment.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  lsp_host.rs  path_util.rs  project.rs
src/components/: NodeEditorOverlay.tsx  SpatialCanvas.tsx  Toolbar.tsx
src/store/: useGraphiteStore.ts
test/: widget_test.dart
tooling/monaco_lsp/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+59 files in other folders)
