[package]
name = "tauri-app"
version = "0.1.0"
description = "Graphite spatial IDE (Tauri)"
authors = ["Graphite contributors"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
dunce = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "process", "sync", "signal", "net"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
bytes = "1"
tracing = "0.1"
